// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationsList.store action creators matches the last snapshot from fetchNotifications 1`] = `
Object {
  "graphql": Object {
    "query": "query ($first: Int, $offset: Int) {
        notifications (first: $first, offset: $offset, order: \\"desc\\") {
          total
          hasMore
          items {
            id
            createdAt
            activity {
              id
              actor {
                id
                name
                avatarUrl
              }
              comment {
                id
                text
              }
              post {
                id
                title
                details
              }
              community {
                id
                name
                slug
              }
              meta {
                reasons
              }
              action
              unread
            }
          }
        }
      }",
    "variables": Object {
      "first": 20,
      "offset": 0,
    },
  },
  "meta": Object {
    "extractModel": "Notification",
    "extractQueryResults": Object {
      "getItems": [Function],
    },
    "resetCount": true,
  },
  "type": "NotificationsList/FETCH_NOTIFICATIONS",
}
`;

exports[`NotificationsList.store action creators matches the last snapshot from markActivityRead 1`] = `
Object {
  "graphql": Object {
    "query": "mutation ($id: ID) {
        markActivityRead(id: $id) {
          id
        }
      }",
    "variables": Object {
      "id": "1",
    },
  },
  "meta": Object {
    "id": "1",
    "optimistic": true,
  },
  "type": "NotificationsList/MARK_ACTIVITY_READ",
}
`;

exports[`NotificationsList.store action creators matches the last snapshot from markAllActivitiesRead 1`] = `
Object {
  "graphql": Object {
    "query": "mutation {
        markAllActivitiesRead {
          success
        }
      }",
  },
  "meta": Object {
    "optimistic": true,
  },
  "type": "NotificationsList/MARK_ALL_ACTIVITIES_READ",
}
`;
